@@ -21,7 +21,11 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
  - Fixed /reconnect and auto-reconnect issue [1525383].
  - Plugin API: Added fields: lag, queue to the "channels" list.
  - 
-
+ - Perl (Lian Wan Situ)
+  * Changed Xchat::print and Xchat::command to return false if they are
+    called with either no arguments or undef
+  * Changed Xchat::user_info so that it works even if the nick parameter
+    contains color codes
 
 ----------------------------------------------------------------------
  2.6.6 - 18/Jul/2006
